<resources>
    <string name="app_name">Android app 2021</string>
    <string name="toolbar_title">Dashboard</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google">GOOGLE SIGN UP</string>
    <string name="not_a_user_sign_up">NOT A USER? | SIGN UP</string>
    <string name="log_in">Log IN</string>
    <string name="enter_password">Enter Password</string>
    <string name="user_login">User Login</string>
    <string name="enter_email">Enter Email</string>
</resources>